cmake_minimum_required(VERSION 3.2.0 FATAL_ERROR)
project(iphelper)

set(PROJECT_VERSION_MAJOR 1)
set(PROJECT_VERSION_MINOR 0)
set(PROJECT_VERSION_PATCH 0)
set(PROJECT_VERSION ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH})

find_package(Qt5 5.7 COMPONENTS Network Widgets REQUIRED)

set(CMAKE_AUTOMOC ON)

add_subdirectory(src)
